--- a/front-end/src/app/pages/icms/icms-home/icms-home.component.html
+++ b/front-end/src/app/pages/icms/icms-home/icms-home.component.html
@@ -1,6 +1,5 @@
 <div class="container">
   <div class="icms">
-    <h1>ICMS</h1>
     <button nz-button [nzSize]="'large'" class="botao botaoComprar">Comprar nova licença</button>
   </div>
 
@@ -46,8 +45,8 @@
         </td>
         <td [nzAlign]="'center'">
           <ng-container>
-            <button nz-button [nzSize]="'large'" class="botao botaoGerenciar" routerLink="/icms/grupo-notas, data.id"
-              routerLinkActive="active">Gerenciar</button>
+            <button nz-button [nzSize]="'large'" class="botao botaoGerenciar" routerLink="/icms/grupo-notas"
+              routerLinkActive="active">Acessar</button>
           </ng-container>
         </td>
       </tr>
