--- a/front-end/src/app/pages/login/login.component.scss
+++ b/front-end/src/app/pages/login/login.component.scss
@@ -1,17 +1,17 @@
 body {
-    padding: 0;
-    margin: 0;
-    display: flex;
-    height: 100vh;
-    overflow: hidden;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  height: 100vh;
+  overflow: hidden;
 }
 
 .images {
-    width: 70%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background-color: #f5f5f5;
+  width: 70%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #f5f5f5;
 }
 
 .logo {
@@ -31,88 +31,161 @@ img.icones {
 }
 
 .images img {
-    max-width: 100%;
-    margin-bottom: 20px;
+  max-width: 100%;
+  margin-bottom: 20px;
 }
 
 .container {
-    width: 50%;
-    background-color: #005CAA;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    padding: 5em;
+  width: 50%;
+  background-color: #005CAA;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  padding: 5em;
 }
 
 .icons {
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
-    max-width: 30em;
-    margin-bottom: 20px;
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  max-width: 30em;
+  margin-bottom: 20px;
 }
 
 .icons img {
-    width: 30%;
-    max-width: 5em; /* Ajuste o tamanho conforme necessário */
+  width: 30%;
+  max-width: 5em; /* Ajuste o tamanho conforme necessário */
 }
 
 hr {
-    width: 100%;
-    max-width: 30em;
-    border: 1px solid #fff;
-    margin-bottom: 20px;
+  width: 100%;
+  max-width: 30em;
+  border: 1px solid #fff;
+  margin-bottom: 20px;
 }
 
 .formulario {
-    width: 30em;
-    display: flex;
-    flex-direction: column;
+  width: 30em;
+  display: flex;
+  flex-direction: column;
 }
 
 .formulario label {
-    margin-top: 5px;
-    color: #fff;
+  margin-top: 5px;
+  color: #fff;
 }
 
 .formulario input {
-    margin-bottom: 15px;
-    padding: 10px;
-    width: 100%;
-    box-sizing: border-box;
-    border: 1px solid #ccc;
-    border-radius: 5px;
+  margin-bottom: 15px;
+  padding: 10px;
+  width: 100%;
+  box-sizing: border-box;
+  border: 1px solid #ccc;
+  border-radius: 5px;
 }
 
 .botao {
-    padding: 10px;
-    background-color: #fff;
-    color: #005CAA;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    width: 100%;
-    max-width: 20em;
-    align-self: center;
-    margin-bottom: 15px;
+  padding: 10px;
+  background-color: #fff;
+  color: #005CAA;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  width: 100%;
+  max-width: 20em;
+  align-self: center;
+  margin-bottom: 15px;
 }
 
 .botao:disabled {
-    background-color: #ccc;
-    cursor: not-allowed;
+  background-color: #ccc;
+  cursor: not-allowed;
 }
 
 .esqueceu-senha {
-    align-self: flex-end;
-    color: #fff;
-    margin-bottom: 15px;
-    text-decoration: none;
+  align-self: flex-end;
+  color: #fff;
+  margin-bottom: 15px;
+  text-decoration: none;
 }
 
 .cadastre-se {
-    color: #fff;
-    text-align: center;
-    display: block;
-    text-decoration: none;
+  color: #fff;
+  text-align: center;
+  display: block;
+  text-decoration: none;
+}
+
+@media (max-width: 1200px) {
+  .container {
+      padding: 3em;
+  }
+  .formulario {
+      width: 25em;
+  }
+}
+
+@media (max-width: 992px) {
+  body {
+      flex-direction: column;
+  }
+  .images {
+    display: none;
+  }
+  .container {
+      width: 100%;
+      padding: 2em;
+  }
+  .formulario {
+      width: 100%;
+  }
+  .login-img {
+      width: 25em;
+      height: auto;
+  }
+  .logo {
+      width: 20em;
+      height: auto;
+  }
+}
+
+@media (max-width: 768px) {
+  .logo {
+      width: 15em;
+  }
+  .login-img {
+      width: 20em;
+  }
+  .formulario input {
+      padding: 8px;
+  }
+  .container {
+      padding: 1em;
+  }
+  .botao {
+      padding: 8px;
+  }
+
+}
+
+@media (max-width: 576px) {
+  .container {
+      padding: 0.5em;
+  }
+  .formulario {
+      width: 100%;
+  }
+  .formulario input {
+      padding: 6px;
+  }
+  .botao {
+      padding: 6px;
+  }
+  .logo {
+      width: 10em;
+  }
+  .login-img {
+      width: 15em;
+  }
 }
