--- a/front-end/src/app/pages/login/login.component.html
+++ b/front-end/src/app/pages/login/login.component.html
@@ -18,7 +18,7 @@
                 <input type="password" name="senha" id="senha" [(ngModel)]="usuario.senha">
                 <a href="#" class="esqueceu-senha">Esqueceu a senha?</a>
             </div>
-            <input type="submit" value="Entrar" [disabled]="form.invalid" class="botao">
+            <input type="submit" value="Entrar" [disabled]="form.invalid" class="botao" routerLink="/inicio">
             <a href="#" class="cadastre-se">Cadastre-se</a>
         </form>
     </div>
