--- a/front-end/src/app/pages/login/login.component.scss
+++ b/front-end/src/app/pages/login/login.component.scss
@@ -3,11 +3,12 @@ body {
   margin: 0;
   display: flex;
   height: 100vh;
+  width: 100vw; 
   overflow: hidden;
 }
 
 .images {
-  width: 70%;
+  width: 50%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -42,7 +43,8 @@ img.icones {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  padding: 5em;
+  padding: 5em 0;
+  margin: 0;
 }
 
 .icons {
@@ -55,7 +57,7 @@ img.icones {
 
 .icons img {
   width: 30%;
-  max-width: 5em; /* Ajuste o tamanho conforme necessário */
+  max-width: 5em;
 }
 
 hr {
@@ -139,14 +141,6 @@ hr {
   }
   .formulario {
       width: 100%;
-  }
-  .login-img {
-      width: 25em;
-      height: auto;
-  }
-  .logo {
-      width: 20em;
-      height: auto;
   }
 }
 
