--- a/front-end/src/app/pages/adm/cadastro-precificacao/cadastro-precificacao.component.html
+++ b/front-end/src/app/pages/adm/cadastro-precificacao/cadastro-precificacao.component.html
@@ -1,18 +1,28 @@
-<body>
-  <div class="images">
-    <img src="../../../assets/images/ReviewMais 1.png" alt="logo" class="logo">
-    <img src="../../../assets/images/login.png" alt="Imagem cadastro" class="login-img">
-</div>
-  <div class="container">
-    <form>
-      <div class="formulario">
-        <label for="nomeProduto">Classificação de empresa</label>
-        <input type="text" name="nomeProduto" id="nomeProduto" class="campo">
+<form nz-form class="form-cadastrar">
+  <nz-row [nzGutter]="[24, 0]">
 
-        <label for="valorProduto">Valor</label>
-        <input type="text" name="valorProduto" id="valorProduto" class="campo">
-      </div>
-      <input type="submit" value="Cadastrar Preço" class="botao">
-    </form>
-  </div>
-</body>
+      <nz-col nzXs="24" nzLg="12">
+          <nz-form-item>
+              <nz-form-label nzSpan="24">Classificação da Empresa</nz-form-label>
+              <nz-form-control>
+                  <input nz-input nz-col nzSize="large" nzSpan="24"[(ngModel)]="precificacao.opcao" [ngModelOptions]="{standalone: true}" ngDefaultControl/>
+              </nz-form-control>
+          </nz-form-item>
+      </nz-col>
+
+      <nz-col nzXs="24" nzLg="12">
+          <nz-form-item>
+              <nz-form-label nzSpan="24">Valor</nz-form-label>
+              <nz-form-control>
+                  <input nz-input nz-col nzSize="large" nzSpan="24" [(ngModel)]="precificacao.valor" [ngModelOptions]="{standalone: true}" ngDefaultControl/>
+              </nz-form-control>
+          </nz-form-item>
+      </nz-col>
+
+      <nz-col nzSpan="24">
+          <nz-row nzJustify="end">
+              <button nz-button [nzSize]="'large'" nzType="primary" (click)="submit()">Cadastrar</button>
+          </nz-row>
+      </nz-col>
+  </nz-row>
+</form>
