--- a/front-end/src/app/pages/cadastro-empresa/cadastro-empresa.component.html
+++ b/front-end/src/app/pages/cadastro-empresa/cadastro-empresa.component.html
@@ -1,30 +1,51 @@
-<body>
-  <div class="images">
-      <img src="../../../assets/images/ReviewMais 1.png" alt="logo" class="logo">
-      <img src="../../../assets/images/login.png" alt="Imagem cadastro" class="login-img">
-  </div>
-  <div class="container">
-      <form>
-          <div class="formulario">
-              <label for="nomeEmpresa">Nome da Empresa</label>
-              <input type="text" name="nomeEmpresa" id="nomeEmpresa" class="campo">
-              <label for="nomeFantasia">Nome Fantasia</label>
-              <input type="text" name="nomeFantasia" id="nomeFantasia" class="campo">
-              <label for="Cnpj">CNPJ</label>
-              <input type="text" name="Cnpj" id="Cnpj" class="campo">
-              <label for="dono">Dono</label>
-              <input type="password" name="dono" id="dono" class="campo">
-              <label for="tipoNegocio">Tipo de Negócio</label>
-              <select  name="confirmarSenha" id="confirmarSenha" class="campo">
-                <option value=""></option>
-                <option value="1">Pessoa Física</option>
-                <option value="2">MEI</option>
-                <option value="3">Empresa de pequeno porte</option>
-                <option value="4">Empresa de médio porte</option>
-                <option value="5">Empresa de grande porte</option>
-              </select>
-          </div>
-          <input type="submit" value="Cadastrar" class="botao">
-      </form>
-  </div>
-</body>
+<form nz-form class="form-cadastrar">
+  <nz-row [nzGutter]="[24, 0]">
+  <nz-col nzXs="24" nzLg="12">
+    <nz-form-item>
+        <nz-form-label nzSpan="24">Nome da Empresa</nz-form-label>
+        <nz-form-control>
+            <input nz-input nz-col nzSize="large" nzSpan="24" [(ngModel)]="empresa.nome" [ngModelOptions]="{standalone: true}" ngDefaultControl/>
+        </nz-form-control>
+    </nz-form-item>
+</nz-col>
+
+<nz-col nzXs="24" nzLg="12">
+  <nz-form-item>
+      <nz-form-label nzSpan="24">Nome Fantasia</nz-form-label>
+      <nz-form-control>
+          <input nz-input nz-col nzSize="large" nzSpan="24" [(ngModel)]="empresa.nomeFantasia" [ngModelOptions]="{standalone: true}" ngDefaultControl/>
+      </nz-form-control>
+  </nz-form-item>
+</nz-col>
+
+<nz-col nzXs="24" nzLg="12">
+  <nz-form-item>
+      <nz-form-label nzSpan="24">CNPJ</nz-form-label>
+      <nz-form-control>
+          <input nz-input nz-col nzSize="large" nzSpan="24" [(ngModel)]="empresa.cnpj" [ngModelOptions]="{standalone: true}" ngDefaultControl/>
+      </nz-form-control>
+  </nz-form-item>
+</nz-col>
+
+      <!-- <nz-col nzXs="24" nzMd="12" nzLg="8">
+          <nz-form-item>
+              <nz-form-label nzSpan="24">Nome da Empresa</nz-form-label>
+              <nz-form-control>
+                  <nz-select nzShowSearch nzAllowClear nzPlaceHolder="Selecionar Origem" [(ngModel)]="empresa.nome" [ngModelOptions]="{standalone: true}" ngDefaultControl *ngIf="this.editavel">
+                      <nz-option *ngFor="let produto of produtos" [nzLabel]="produto.ncm" [nzValue]="produto"></nz-option>
+                  </nz-select>
+                  <input nz-input nz-col nzSize="large" nzSpan="24" [(ngModel)]="multiplicador.produto.ncm" [ngModelOptions]="{standalone: true}" ngDefaultControl *ngIf="!this.editavel" [disabled]="true"/>
+              </nz-form-control>
+          </nz-form-item>
+      </nz-col> -->
+
+
+
+
+      <nz-col nzSpan="24">
+          <nz-row nzJustify="end">
+              <button nz-button [nzSize]="'large'" nzType="primary" (click)="submit()">Cadastrar</button>
+          </nz-row>
+      </nz-col>
+  </nz-row>
+</form>
