tela de usuarios quase pronta

--- a/front-end/src/app/pages/adm/adm.component.html
+++ b/front-end/src/app/pages/adm/adm.component.html
@@ -18,6 +18,10 @@
                     <span nz-icon nzType="credit-card" nzTheme="outline"></span>
                     Multiplicadores
                 </li>
+                <li nz-menu-item routerLink="/adm/usuarios" routerLinkActive="active">
+                  <span nz-icon nzType="credit-card" nzTheme="outline"></span>
+                  Usuários
+              </li>
             </ul>
         </nz-sider>
         <nz-content class="content">
