--- a/front-end/src/app/pages/inicio/inicio.component.html
+++ b/front-end/src/app/pages/inicio/inicio.component.html
@@ -22,7 +22,7 @@
         <th></th>
         <th nzWidth="10%">
           <ng-container>
-            <button nz-button [nzSize]="'large'" class="botao botaoAdicionar">Adicionar empresa</button>
+            <button nz-button [nzSize]="'large'" class="botao botaoAdicionar" routerLink="../cadastro-empresa">Adicionar empresa</button>
           </ng-container>
         </th>
       </tr>
