--- a/front-end/src/app/app.component.html
+++ b/front-end/src/app/app.component.html
@@ -20,7 +20,10 @@
     </nz-header>
 
     <nz-content>
-      <div class="inner-content" id="inner-content">
+      <div class="inner-content" id="inner-content" *ngIf="isLoggedIn()">
+        <router-outlet></router-outlet>
+      </div>
+      <div *ngIf="!isLoggedIn()">
         <router-outlet></router-outlet>
       </div>
     </nz-content>
