--- a/front-end/src/app/pages/login/login.component.scss
+++ b/front-end/src/app/pages/login/login.component.scss
@@ -3,7 +3,7 @@ body {
   margin: 0;
   display: flex;
   height: 100vh;
-  width: 100vw; 
+  width: 100vw;
   overflow: hidden;
 }
 
@@ -13,6 +13,13 @@ body {
   flex-direction: column;
   align-items: center;
   background-color: #f5f5f5;
+}
+
+.images-review {
+  width: 50vw;
+  display: none;
+  flex-direction: column;
+  align-items: center;
 }
 
 .logo {
@@ -37,7 +44,7 @@ img.icones {
 }
 
 .container {
-  width: 50%;
+  width: 50vw;
   background-color: #005CAA;
   display: flex;
   justify-content: center;
@@ -45,6 +52,78 @@ img.icones {
   flex-direction: column;
   padding: 5em 0;
   margin: 0;
+  height: 100vh;
+
+  .formulario {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+  }
+  .form{
+    width: 70%;
+  }
+
+  .formulario label {
+    margin-top: 5px;
+    color: #fff;
+  }
+
+  .formulario input {
+    margin-bottom: 15px;
+    padding: 10px;
+    width: 100%;
+    box-sizing: border-box;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+  }
+
+  .botao {
+    padding: 10px;
+    background-color: #fff;
+    color: #005CAA;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    width: 100%;
+    max-width: 20em;
+    align-self: center;
+    margin-bottom: 15px;
+  }
+
+  .botao:hover {
+    font-weight: bold;
+    background-color: #c8e5ff;
+    color: black;
+
+  }
+
+  .botao:disabled {
+    background-color: #ccc;
+    cursor: not-allowed;
+  }
+
+  .esqueceu-senha {
+    align-self: flex-end;
+    color: #fff;
+    margin-bottom: 15px;
+    text-decoration: none;
+  }
+
+  .esqueceu-senha:hover{
+    color: #abacac;
+  }
+
+  .cadastre-se {
+    color: #fff;
+    text-align: center;
+    display: block;
+    text-decoration: none;
+  }
+  .cadastre-se:hover{
+    color: #abacac;
+  }
+
+
 }
 
 .icons {
@@ -60,126 +139,70 @@ img.icones {
   max-width: 5em;
 }
 
-hr {
-  width: 100%;
-  max-width: 30em;
-  border: 1px solid #fff;
-  margin-bottom: 20px;
-}
 
-.formulario {
-  width: 30em;
-  display: flex;
-  flex-direction: column;
-}
 
-.formulario label {
-  margin-top: 5px;
-  color: #fff;
-}
-
-.formulario input {
-  margin-bottom: 15px;
-  padding: 10px;
-  width: 100%;
-  box-sizing: border-box;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-}
-
-.botao {
-  padding: 10px;
-  background-color: #fff;
-  color: #005CAA;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-  width: 100%;
-  max-width: 20em;
-  align-self: center;
-  margin-bottom: 15px;
-}
-
-.botao:disabled {
-  background-color: #ccc;
-  cursor: not-allowed;
-}
-
-.esqueceu-senha {
-  align-self: flex-end;
-  color: #fff;
-  margin-bottom: 15px;
-  text-decoration: none;
-}
-
-.cadastre-se {
-  color: #fff;
-  text-align: center;
-  display: block;
-  text-decoration: none;
-}
-
-@media (max-width: 1200px) {
-  .container {
-      padding: 3em;
-  }
-  .formulario {
-      width: 25em;
-  }
-}
-
-@media (max-width: 992px) {
+@media (max-width: 1050px) {
   body {
-      flex-direction: column;
+    flex-direction: column;
   }
+
   .images {
     display: none;
   }
-  .container {
-      width: 100%;
-      padding: 2em;
+
+  .images-review {
+    display: flex;
+
   }
+
+  .container {
+    width: 100%;
+    max-width: 100%;
+  }
+
   .formulario {
-      width: 100%;
+    width: 30%;
   }
+  .esqueceu-senha, .cadastre-se, .botao, label, #nomeUsuario, #senha{
+    font-size: 2.3em;
+  }
+  
 }
 
-@media (max-width: 768px) {
-  .logo {
-      width: 15em;
-  }
-  .login-img {
-      width: 20em;
-  }
-  .formulario input {
-      padding: 8px;
-  }
-  .container {
-      padding: 1em;
-  }
-  .botao {
-      padding: 8px;
-  }
+// @media (max-width: 768px) {
+//   .logo {
+//       width: 15em;
+//   }
+//   .login-img {
+//       width: 20em;
+//   }
+//   .formulario input {
+//       padding: 8px;
+//   }
 
-}
+//   .botao {
+//       padding: 8px;
+//   }
 
-@media (max-width: 576px) {
-  .container {
-      padding: 0.5em;
-  }
-  .formulario {
-      width: 100%;
-  }
-  .formulario input {
-      padding: 6px;
-  }
-  .botao {
-      padding: 6px;
-  }
-  .logo {
-      width: 10em;
-  }
-  .login-img {
-      width: 15em;
-  }
-}
+// }
+
+// @media (max-width: 576px) {
+//   .container {
+//     padding: 0.5em;
+//   }
+//   .formulario {
+//     width: 100%;
+//   }
+//   .formulario input {
+//     padding: 6px;
+//   }
+//   .botao {
+//     padding: 6px;
+//   }
+//   .logo {
+//     width: 10em;
+//   }
+//   .login-img {
+//     width: 15em;
+//   }
+// }
