--- a/front-end/src/app/pages/login/login.component.html
+++ b/front-end/src/app/pages/login/login.component.html
@@ -1,4 +1,4 @@
-<body (submit)="submit(form)">
+<div (submit)="submit(form)" class="container-main">
     <div class="images">
         <img src="../../../assets/images/ReviewMais 1.png" alt="logo" class="logo">
         <img src="../../../assets/images/login.png" alt="Imagem login" class="login-img">
@@ -19,4 +19,4 @@
             <a href="#" class="cadastre-se">Cadastre-se</a>
         </form>
     </div>
-</body>
+</div>
