--- a/front-end/src/app/pages/login/login.component.scss
+++ b/front-end/src/app/pages/login/login.component.scss
@@ -1,7 +1,8 @@
-body {
+.container-main {
   padding: 0;
   margin: 0;
   display: flex;
+  flex-direction: row;
   height: 100vh;
   width: 100vw;
   overflow: hidden;
