refactor: alterando rotas

--- a/front-end/src/app/pages/icms/icms-grupo-notas/icms-grupo-notas.component.html
+++ b/front-end/src/app/pages/icms/icms-grupo-notas/icms-grupo-notas.component.html
@@ -63,7 +63,7 @@
                 <th colspan="2" class="th-importar">
                     <ng-container class="th-importar">
                         <button nz-button [nzSize]="'large'" class="botao botaoAdicionar th-importar"
-                            routerLink="/icms/importar-nota" routerLinkActive="active">Importar Notas</button>
+                            routerLink="./importar-nota" routerLinkActive="active">Importar Notas</button>
                     </ng-container>
                 </th>
             </tr>
